# GSTLaba1

./: .gitignore  CMakeLists.txt  IN.txt  OUT.txt  README.md  generate.c  generator.c  main.c  main2.c  main3.c  main_pls.c  otchet.odt  usefull_links.txt
